# logos-logoscore-py

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  doctests.yml  publish.yml
docs/: project.md  spec.md
doctests/: logoscore-py-as-a-library.test.yaml  run.sh
doctests/outputs/: logoscore-py-as-a-library.md
pr-6/: index.html
pr-6/macos-latest/: index.html
pr-6/ubuntu-latest/: index.html
src/logoscore/: __init__.py  _proc.py  client.py  daemon.py  docker_daemon.py  errors.py  events.py  tokens.py
tests/: _basic_module_cases.py  conftest.py
tests/docker_smoke/: Dockerfile  README.md  build_modules_in_docker.sh  build_smoke_image.sh  conftest.py  test_docker_smoke.py  test_docker_ssl_smoke.py
tests/integration/: test_basic_module_cpp_methods.py  test_basic_module_methods.py  test_docker_smoke.py  test_end_to_end.py
tests/integration/docker/: Dockerfile  README.md  build_smoke_image.sh
tests/unit/: test_client_config.py  test_client_with_fake.py  test_errors.py
